warnings eliminados